tests/baselines/reference/typeParametersShouldNotBeEqual.errors.txt
tests/cases/compiler/typeParametersShouldNotBeEqual.ts(4,5): error TS2322: Type 'U' is not assignable to type 'T'.
tests/cases/compiler/typeParametersShouldNotBeEqual.ts(5,5): error TS2322: Type 'Object' is not assignable to type 'T'.
  'Object' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.
    The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?
tests/cases/compiler/typeParametersShouldNotBeEqual.ts(6,5): error TS2322: Type 'T' is not assignable to type 'Object'.


==== tests/cases/compiler/typeParametersShouldNotBeEqual.ts (3 errors) ====
    function ff<T, U>(x: T, y: U) {
        var z: Object;
        x = x;  // Ok
        x = y;  // Error
        ~
!!! error TS2322: Type 'U' is not assignable to type 'T'.
        x = z;  // Error
        ~
!!! error TS2322: Type 'Object' is not assignable to type 'T'.
!!! error TS2322:   'Object' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.
!!! error TS2322:     The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?
        z = x;  // Ok
        ~
!!! error TS2322: Type 'T' is not assignable to type 'Object'.
    }
    